[package]
name = "vrm-rs"
version = "0.1.0"
authors = ["3c1u <298748+3c1u@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { version = "0.13.0", path = "../gltf" }
serde = { version = "1.0.99", features = ["derive"] }
